--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,7 @@
-@import 'themes';
-
-@import '~@nebular/theme/styles/globals';
+@import "~@nebular/theme/styles/globals";
+@import "./styles/themes";
+@import "./styles/custom-global-styles.scss";
 
 @include nb-install() {
   @include nb-theme-global();
-};
-/* You can add global styles to this file, and also import other style files */
+}
