--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,8 @@
 $default-border-radius-1: 25px;
 $background-color-1: #f5f4ff;
 $default-box-shadow-1: 0 0.5rem 1.25rem 0 rgb(218 224 235 / 60%);
+$purple-color-2: #9fa3ea;
+$lead-color: #757575;
+$primary-color: #273752;
+$primary-color-hover: #344c73;
+$primary-color-focus: #42649b;
