--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<nb-layout>
+  <nb-layout-column class="p-0 position-relative">
+    <router-outlet></router-outlet>
+  </nb-layout-column>
+</nb-layout>
