Tela de tipo de emprestimo + Outros ajustes

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,6 +11,7 @@
   <form class="c-login__form px-4 px-md-5 py-3 py-md-4">
     <div class="px-5 py-4 d-flex justify-content-center">
       <img
+        alt="login-logo"
         class="c-login__form--image"
         src="../../../assets/undraw-transfer-money-2.svg"
       />
