--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import "~@nebular/theme/styles/globals";
 @import "./styles/themes";
 @import "./styles/custom-global-styles.scss";
+@import "./styles/override.scss";
 
 @include nb-install() {
   @include nb-theme-global();
