--- a/src/styles/custom-global-styles.scss
+++ b/src/styles/custom-global-styles.scss
@@ -24,7 +24,7 @@ h6 {
 }
 
 .section-with-navbar {
-  margin-top: 76px !important;
+  margin-top: variables.$navbar-height !important;
 }
 
 @media (max-width: 500px) {
