--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -12,6 +12,7 @@ $nb-themes: nb-register-theme(
     color-primary-focus-border: variables.$primary-color-focus,
     color-primary-active: variables.$primary-color-focus,
     color-primary-active-border: variables.$primary-color-focus,
+    text-basic-color: variables.$text-basic-color,
   ),
   default,
   default
