--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,10 @@
 $default-border-radius-1: 25px;
-$background-color-1: #f5f4ff;
 $default-box-shadow-1: 0 0.5rem 1.25rem 0 rgb(218 224 235 / 60%);
-$purple-color-2: #9fa3ea;
 $lead-color: #757575;
 $gray-color: #949494;
-$primary-color: #273752;
-$primary-color-hover: #344c73;
-$primary-color-focus: #42649b;
+$primary-color: #276b50;
+$primary-color-hover: #13a26a;
+$primary-color-focus: #0b593a;
+$secondary-color: #f3b01d;
+$text-basic-color: #1a4066;
+$navbar-height: 76px;
