--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,42 @@
 <app-navbar></app-navbar>
-<section class="c-home section-with-navbar container mx-auto py-4">
-  <h1>Home Page</h1>
-</section>
+<div class="c-home section-with-navbar">
+  <section class="c-home__main container mx-auto px-4">
+    <div class="row">
+      <div class="col-12 col-lg-6">
+        <img
+          class="c-home__main--img"
+          src="../../../assets/stock-6-removebg-preview.png"
+          alt="empréstimo"
+        />
+      </div>
+      <div
+        class="
+          col-12 col-lg-6
+          py-4
+          c-home__main--title-container
+          d-flex
+          flex-wrap
+          align-items-center
+        "
+      >
+        <div>
+          <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+          <h6 class="lead-color">
+            Quod, adipisci quas, accusantium doloremque deserunt pariatur
+            explicabo sed provident ipsa ipsam maxime nemo unde voluptates
+            fugiat ullam nam praesentium quae enim.
+          </h6>
+          <button
+            nbButton
+            class="mt-5"
+            status="primary"
+            size="giant"
+            [routerLink]="['/selecionar-tipo-emprestimo']"
+          >
+            Simular Agora
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
