--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,17 +1,43 @@
+@use '../../../styles/variables.scss' as variables;
+
 .c-home {
-  background-image: linear-gradient(
-    #edca49,
-    #ecca44,
-    #eac63e,
-    #e5c135,
-    #dcb623
-  );
+  scroll-behavior: smooth;
+
   &__main {
+    background-image: linear-gradient(
+      #edca49,
+      #ecca44,
+      #eac63e,
+      #e5c135,
+      #dcb623
+    );
+    height: calc(100vh - #{variables.$navbar-height});
+
     &--title-container {
     }
 
     &--img {
-      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__loan-type {
+  }
+
+  &__about {
+    background-color: white;
+  }
+}
+
+@media (max-width: 768px) {
+  .c-home {
+    &__main {
+      height: unset;
+
+      &--img {
+        height: unset;
+        width: 100%;
+      }
     }
   }
 }
