--- a/src/styles/custom-global-styles.scss
+++ b/src/styles/custom-global-styles.scss
@@ -27,6 +27,28 @@ h6 {
   margin-top: variables.$navbar-height !important;
 }
 
+.glassmorphism-card-1 {
+  background: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(11px);
+  -webkit-backdrop-filter: blur(11px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.glassmorphism-card-2 {
+  background: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.with-divider {
+  border-bottom: 1px solid #e4e4e4;
+}
+
 @media (max-width: 500px) {
   h3 {
     font-size: 1.2rem !important;
