--- a/src/styles/custom-global-styles.scss
+++ b/src/styles/custom-global-styles.scss
@@ -49,6 +49,10 @@ h6 {
   border-bottom: 1px solid #e4e4e4;
 }
 
+.circle {
+  border-radius: 50%;
+}
+
 @media (max-width: 500px) {
   h3 {
     font-size: 1.2rem !important;
