--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -46,7 +46,7 @@
       </div>
     </div>
   </section>
-  <!-- Segunda seção -->
+  <!-- Seção Tipos de Empréstimo -->
   <section class="c-home__loan-type">
     <div class="container mx-auto px-4 py-5">
       <div class="row">
@@ -86,6 +86,132 @@
               image="../../../assets/undraw-transfer-money-4.svg"
             ></app-card-tipo-emprestimo>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Seção de Depoimentos -->
+  <section class="c-home__quotes">
+    <div class="container mx-auto px-4 py-5">
+      <div class="row py-4">
+        <div class="col-12">
+          <div class="text-center">
+            <h1 class="text-white mt-0">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </h1>
+            <p class="text-white">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis
+              veniam reprehenderit voluptatibus aspernatur totam veritatis cum
+              ad unde, inventore ipsa corporis necessitatibus voluptas mollitia,
+              nihil voluptates in magnam! Ipsum, quibusdam!
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <!-- Card de depoiment 1 ** DEVE SER COMPONENTIZADO **-->
+        <div class="col-12 col-lg-4 c-home__quotes--card py-2">
+          <div
+            class="
+              glassmorphism-card-1
+              d-flex
+              justify-content-center
+              align-items-center
+              flex-wrap
+              p-4
+            "
+          >
+            <div class="c-home__quotes--people-img circle col-12 col-lg-4 my-3">
+              <img
+                src="../../../assets/stock-2.png"
+                alt="people-1"
+                class="circle"
+                width="100%"
+                height="100%"
+              />
+            </div>
+            <div
+              class="c-home__quotes--people-detail col-12 col-lg-8 ps-0 ps-lg-4"
+            >
+              <p><strong>Fulano de Souza</strong></p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+                illum dicta, excepturi fugit totam, dolore quod maxime autem
+                neque, culpa soluta nihil nisi unde mollitia illo.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Card de depoiment 2 ** DEVE SER COMPONENTIZADO **-->
+        <div class="col-12 col-lg-4 c-home__quotes--card py-2">
+          <div
+            class="
+              d-flex
+              glassmorphism-card-1
+              justify-content-center
+              align-items-center
+              flex-wrap
+              p-4
+            "
+          >
+            <div class="c-home__quotes--people-img circle col-12 col-lg-4 my-3">
+              <img
+                src="../../../assets/stock-6.png"
+                alt="people-1"
+                class="circle"
+                width="100%"
+                height="100%"
+              />
+            </div>
+            <div
+              class="c-home__quotes--people-detail col-12 col-lg-8 ps-0 ps-lg-4"
+            >
+              <p><strong>Ciclano Santos</strong></p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+                illum dicta, excepturi fugit totam, dolore quod maxime autem
+                neque, culpa soluta nihil nisi unde mollitia illo.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Card de depoiment 3 ** DEVE SER COMPONENTIZADO **-->
+        <div class="col-12 col-lg-4 c-home__quotes--card py-2">
+          <div
+            class="
+              d-flex
+              glassmorphism-card-1
+              justify-content-center
+              align-items-center
+              flex-wrap
+              p-4
+            "
+          >
+            <div class="c-home__quotes--people-img circle col-4 my-3">
+              <img
+                src="../../../assets/stock-3.png"
+                alt="people-1"
+                class="circle"
+                width="100%"
+                height="100%"
+              />
+            </div>
+            <div
+              class="c-home__quotes--people-detail col-12 col-lg-8 ps-0 ps-lg-4"
+            >
+              <p><strong>Beltrano Silva</strong></p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+                illum dicta, excepturi fugit totam, dolore quod maxime autem
+                neque, culpa soluta nihil nisi unde mollitia illo.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 d-flex justify-content-center pt-5">
+          <button nbButton status="basic" size="large">Conheça a Elleve</button>
         </div>
       </div>
     </div>
