Ajuste de cor na homepage

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -25,7 +25,7 @@
   }
 
   &__quotes {
-    background-color: variables.$primary-color;
+    background-color: variables.$text-basic-color;
 
     &--card {
       height: 100%;
