Remoção das Waves + Ajustes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nb-layout-header fixed class="c-navbar">
+<nb-layout-header [fixed]="fixed" class="c-navbar">
   <div class="c-navbar__container container mx-auto px-4">
     <div class="row">
       <div class="c-navbar__container--left col-6 py-3">
