--- a/src/app/pages/selecao-tipo-emprestimo/selecao-tipo-emprestimo.component.html
+++ b/src/app/pages/selecao-tipo-emprestimo/selecao-tipo-emprestimo.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<section class="c-loan-type section-with-navbar container mx-auto p-4">
+<section class="c-loan-type section-with-fixed-navbar container mx-auto p-4">
   <div class="c-loan-type__actions">
     <button
       nbButton
