--- a/src/app/pages/simulacao-negada/simulacao-negada.component.html
+++ b/src/app/pages/simulacao-negada/simulacao-negada.component.html
@@ -1,5 +1,7 @@
 <app-navbar></app-navbar>
-<section class="c-simulation-denied section-with-navbar container mx-auto">
+<section
+  class="c-simulation-denied section-with-fixed-navbar container mx-auto"
+>
   <div class="row">
     <div
       class="
