--- a/src/styles/custom-global-styles.scss
+++ b/src/styles/custom-global-styles.scss
@@ -23,7 +23,7 @@ h6 {
   color: variables.$gray-color !important;
 }
 
-.section-with-navbar {
+.section-with-fixed-navbar {
   margin-top: variables.$navbar-height !important;
 }
 
