--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -31,21 +31,94 @@
       </h6>
     </div>
   </div>
-  <div class="row">
-    <form
-      class="
-        c-create-account__form
-        my-5
-        py-4
-        d-flex
-        justify-content-center
-        flex-wrap
-        col-12
-      "
-    >
-      <fieldset>
-          
-      </fieldset>
-    </form>
+  <div class="row mt-5">
+    <nb-card class="col-12 p-4">
+      <nb-card-body>
+        <nb-stepper linear disableStepNavigation orientation="horizontal">
+          <nb-step
+            *ngIf="initialDataForm"
+            label="Dados iniciais"
+            [stepControl]="ngInitialDataForm"
+          >
+            <form
+              #ngInitialDataForm="ngForm"
+              [formGroup]="initialDataForm"
+              class="c-create-account__form row"
+            >
+              <h6 class="col-12 mx-2 mb-4">
+                <strong>Dados iniciais para cadastro</strong>
+              </h6>
+              <fieldset class="col-12 d-flex flex-wrap">
+                <div class="form-group col-12 col-lg-3 px-2 my-2">
+                  <label for="email">E-mail*:</label>
+                  <nb-form-field>
+                    <input
+                      nbInput
+                      fullWidth
+                      type="email"
+                      id="email"
+                      formControlName="email"
+                      autocomplete="off"
+                  /></nb-form-field>
+                </div>
+                <div class="form-group col-12 col-lg-3 px-2 my-2">
+                  <label for="emailConfirm">Confirme seu e-mail*:</label>
+                  <nb-form-field>
+                    <input
+                      nbInput
+                      fullWidth
+                      type="email"
+                      id="emailConfirm"
+                      formControlName="emailConfirm"
+                      autocomplete="off"
+                  /></nb-form-field>
+                </div>
+                <div class="form-group col-12 col-lg-3 px-2 my-2">
+                  <label for="phone">Celular*:</label>
+                  <nb-form-field>
+                    <input
+                      nbInput
+                      fullWidth
+                      type="text"
+                      id="phone"
+                      formControlName="phone"
+                      autocomplete="off"
+                  /></nb-form-field>
+                </div>
+                <div class="form-group col-12 col-lg-3 px-2 my-2">
+                  <label for="password">Senha*:</label>
+                  <nb-form-field>
+                    <input
+                      nbInput
+                      fullWidth
+                      id="password"
+                      formControlName="password"
+                      [type]="getCurrentPasswordInputType()"
+                      autocomplete="off"
+                    />
+                    <button
+                      nbSuffix
+                      nbButton
+                      ghost
+                      (click)="toggleShowPassword()"
+                    >
+                      <nb-icon
+                        [icon]="
+                          showPassword ? 'eye-outline' : 'eye-off-2-outline'
+                        "
+                        pack="eva"
+                        [attr.aria-label]="
+                          showPassword ? 'hide password' : 'show password'
+                        "
+                      >
+                      </nb-icon>
+                    </button>
+                  </nb-form-field>
+                </div>
+              </fieldset></form
+          ></nb-step>
+          <nb-step label="Consulta dos dados"> </nb-step>
+          <nb-step label="Resultado"> </nb-step></nb-stepper></nb-card-body
+    ></nb-card>
   </div>
 </section>
